V4126: Some fixes and image changes

--- a/Prevu.Synoptics.V4126_Cotiplast-PET/Pages/P020.xaml
+++ b/Prevu.Synoptics.V4126_Cotiplast-PET/Pages/P020.xaml
@@ -19,7 +19,7 @@
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe StatusComponent="096-01-MA1" Width="87" PipeHeight="Medium" Canvas.Left="1190" Canvas.Top="580" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Width="54" StatusComponent="096-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="1100" Canvas.Top="614" HorizontalAlignment="Left" VerticalAlignment="Center">
+        <Labels:Pipe Width="54" StatusComponent="096-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="1121" Canvas.Top="614" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
@@ -117,7 +117,7 @@
             </Machines:CV_Valve.RenderTransform>
         </Machines:CV_Valve>
         <Machines:V01_SB_Sfaldaballe Canvas.Left="174" Canvas.Top="488" Height="166" Width="167" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Machines:V01_Manual_Selection Canvas.Left="1148" Canvas.Top="604" Height="70" Width="45"/>
+        <Machines:V01_Manual_Selection Canvas.Left="1126" Canvas.Top="500" Height="70" Width="44"/>
         <Machines:NT_ConveyorBelt Height="1" Width="134" Canvas.Left="1246" Canvas.Top="668" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Machines:V01_Material_Inlet_Outlet Canvas.Left="29" Canvas.Top="227" Height="69" Width="53" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Machines:V01_VRR_DryTrommel Canvas.Left="833" Canvas.Top="446" Height="122" Width="200" HorizontalAlignment="Left" VerticalAlignment="Center"/>
@@ -130,13 +130,13 @@
         <Machines:Waste Height="46" Width="44" Canvas.Left="865" Canvas.Top="581" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Machines:Waste Height="46" Width="44" Canvas.Left="957" Canvas.Top="581" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Machines:Waste Height="46" Width="44" Canvas.Left="630" Canvas.Top="242" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Machines:Waste Height="46" Width="44" Canvas.Left="1104" Canvas.Top="623" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Machines:Waste Height="46" Width="44" Canvas.Left="1126" Canvas.Top="623" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="026-01-MA1" Canvas.Left="688" Canvas.Top="414" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:DeviceLabel ComponentName="096-01-MA1" Canvas.Left="1122" Canvas.Top="515" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:DeviceLabel ComponentName="096-01-MA1" Canvas.Left="1190" Canvas.Top="514" HorizontalAlignment="Center" VerticalAlignment="Center"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="018-01-MA1" Canvas.Left="213" Canvas.Top="213"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="020-41-LT1" Canvas.Left="108" Canvas.Top="423"/>
         <Labels:DeviceLabel ComponentName="020-DEBALER" Canvas.Left="415" Canvas.Top="598" HorizontalAlignment="Left" VerticalAlignment="Center" />
-        <Labels:DeviceLabel ComponentName="098-01-MA1" Canvas.Left="1290" Canvas.Top="606" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:DeviceLabel ComponentName="098-01-MA1" Canvas.Left="1329" Canvas.Top="607" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:DeviceLabel ComponentName="024-01-MA1" Canvas.Left="479" Canvas.Top="414" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="030-01-MA1" Canvas.Left="888" Canvas.Top="466" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="025-01-MA1" Canvas.Left="563" Canvas.Top="148" HorizontalAlignment="Left" VerticalAlignment="Center"/>
