--- a/Prevu.Synoptics.V4126_Cotiplast-PET/Pages/P100.xaml
+++ b/Prevu.Synoptics.V4126_Cotiplast-PET/Pages/P100.xaml
@@ -51,7 +51,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="56" StatusComponent="115-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="923" Canvas.Top="434" HorizontalAlignment="Left" VerticalAlignment="Center">
+        <Labels:Pipe Width="56" StatusComponent="115-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="945" Canvas.Top="450" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
@@ -125,14 +125,14 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Color="Water" Width="118" RenderTransformOrigin="0.5,0.5" StatusComponent="100-01-MA1" Canvas.Left="817" Canvas.Top="511" HorizontalAlignment="Left" VerticalAlignment="Center">
+        <Labels:Pipe Color="Water" Width="128" RenderTransformOrigin="0.5,0.5" StatusComponent="100-01-MA1" Canvas.Left="782" Canvas.Top="506" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="370" Color="Water" StatusComponent="117-01-MA1" Canvas.Left="495" Canvas.Top="574" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe Width="344" Color="Water" StatusComponent="117-01-MA1" Canvas.Left="495" Canvas.Top="574" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:Pipe Color="Water" Width="82" RenderTransformOrigin="0.5,0.5" StatusComponent="117-01-MA1" Canvas.Left="455" Canvas.Top="613" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
@@ -163,7 +163,7 @@
                 </TransformGroup>
             </Machines:WaterPump.RenderTransform>
         </Machines:WaterPump>
-        <Machines:WaterPump HorizontalAlignment="Left" VerticalAlignment="Center" Height="44" Width="44" RenderTransformOrigin="0.5,0.5" Color="Water" Canvas.Left="854" Canvas.Top="555">
+        <Machines:WaterPump HorizontalAlignment="Left" VerticalAlignment="Center" Height="44" Width="44" RenderTransformOrigin="0.5,0.5" Color="Water" Canvas.Left="824" Canvas.Top="555">
             <Machines:WaterPump.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform ScaleX="-1"/>
@@ -191,9 +191,9 @@
         <Machines:V01_VRR_WetTrommel Canvas.Left="555" Canvas.Top="173" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Machines:V01_SAD14_FlatDiskSeparator Canvas.Left="1138" Canvas.Top="324" Height="109" Width="251" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Machines:Waste Height="46" Width="44" Canvas.Left="1234" Canvas.Top="460" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Machines:V01_SCW_Screw_wHopper Canvas.Left="825" Canvas.Top="365" Width="144" Height="134" HorizontalAlignment="Left" VerticalAlignment="Center" RenderTransformOrigin="0.5,0.5"/>
         <Machines:V01_SCW_ScrewConveyor_straight Canvas.Left="497" Canvas.Top="385" HorizontalAlignment="Center" VerticalAlignment="Top" Width="125"/>
-        <Machines:Waste Height="46" Width="44" Canvas.Left="929" Canvas.Top="440" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Machines:V01_DSCW_SandClassifier Canvas.Left="806" Canvas.Top="395" Height="108" Width="176" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Machines:Waste Height="46" Width="44" Canvas.Left="951" Canvas.Top="456" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Machines:V01_CV_Valve_wColor Canvas.Left="1066" Canvas.Top="403" Height="28" Width="56" Color="Water" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Center">
             <Machines:V01_CV_Valve_wColor.RenderTransform>
                 <TransformGroup>
@@ -207,12 +207,12 @@
         <Machines:WaterPump Height="44" Width="45" RenderTransformOrigin="0.5,0.5" Color="Chemicals" Canvas.Left="231" Canvas.Top="384" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Machines:WaterPump Height="44" Width="45" RenderTransformOrigin="0.5,0.5" Color="Chemicals" Canvas.Left="231" Canvas.Top="448" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:DetailsLabel ComponentName="120-VALVE" DetailsPageName="D120" Canvas.Left="1294" Canvas.Top="269" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:DeviceLabel ComponentName="115-01-MA1" Canvas.Left="929" Canvas.Top="311" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:DeviceLabel ComponentName="115-01-MA1" Canvas.Left="928" Canvas.Top="338" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:DeviceLabel ComponentName="127-21-CV1" Canvas.Left="125" Canvas.Top="381" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:DeviceLabel ComponentName="129-21-CV1" Canvas.Left="125" Canvas.Top="445" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="104-01-MA1" Canvas.Left="662" Canvas.Top="417"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="113-01-MA1" Canvas.Left="199" Canvas.Top="744"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="117-01-MA1" Canvas.Left="832" Canvas.Top="607"/>
+        <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="117-01-MA1" Canvas.Left="802" Canvas.Top="607"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Top" ComponentName="110-71-ECS2" Canvas.Left="687" Canvas.Top="722"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Top" ComponentName="100-01-MA1" Canvas.Left="775" Canvas.Top="149"/>
         <Labels:DeviceLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="106-01-MA1" Canvas.Left="452" Canvas.Top="329"/>
