--- a/Prevu.Synoptics.V4126_Cotiplast-PET/Pages/P288.xaml
+++ b/Prevu.Synoptics.V4126_Cotiplast-PET/Pages/P288.xaml
@@ -53,7 +53,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="52" StatusComponent="283-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="281" Canvas.Top="303">
+        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Top" Width="52" StatusComponent="283-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="227" Canvas.Top="328">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
@@ -84,25 +84,28 @@
         </Machines:CV_Valve_001>
         <Machines:WaterPump HorizontalAlignment="Left" VerticalAlignment="Center" Height="44" Width="46" RenderTransformOrigin="0.5,0.5" Color="Water" Canvas.Left="1149" Canvas.Top="656"/>
         <Machines:Waste HorizontalAlignment="Left" VerticalAlignment="Center" Height="46" Width="44" Canvas.Left="554" Canvas.Top="524"/>
-        <Machines:Waste HorizontalAlignment="Left" VerticalAlignment="Center" Height="46" Width="44" Canvas.Left="285" Canvas.Top="313"/>
+        <Machines:Waste HorizontalAlignment="Left" VerticalAlignment="Top" Height="46" Width="44" Canvas.Left="231" Canvas.Top="338"/>
         <Machines:WaterPump Height="46" Width="46" RenderTransformOrigin="0.5,0.5" Color="Water" Canvas.Left="1149" Canvas.Top="504" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Machines:WaterPump Height="44" Width="46" RenderTransformOrigin="0.5,0.5" Color="Water" Canvas.Left="1149" Canvas.Top="430" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Machines:VRC_WaterCollectingTank Height="78" Width="93" Canvas.Left="412" Canvas.Top="692" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Machines:WaterPump Height="45" Width="45" RenderTransformOrigin="0.5,0.5" Color="Water" BorderBrush="Black" Canvas.Left="436" Canvas.Top="707" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Machines:V01_RTF_Microfilter Canvas.Left="386" Canvas.Top="463" Height="130" Width="144" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Machines:V01_SCW_Screw_wHopper Canvas.Left="287" Canvas.Top="225" HorizontalAlignment="Left" VerticalAlignment="Center" RenderTransformOrigin="0.5,0.5" Width="182" Height="174">
-            <Machines:V01_SCW_Screw_wHopper.RenderTransform>
+        <Machines:V01_DSCW_SandClassifier Canvas.Left="242" Canvas.Top="235" RenderTransformOrigin="0.5,0.5" Height="188" Width="204" HorizontalAlignment="Left" VerticalAlignment="Top">
+            <Machines:V01_DSCW_SandClassifier.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform ScaleX="-1"/>
+                    <SkewTransform/>
+                    <RotateTransform/>
+                    <TranslateTransform/>
                 </TransformGroup>
-            </Machines:V01_SCW_Screw_wHopper.RenderTransform>
-        </Machines:V01_SCW_Screw_wHopper>
+            </Machines:V01_DSCW_SandClassifier.RenderTransform>
+        </Machines:V01_DSCW_SandClassifier>
+        <Machines:WaterPump Height="45" Width="45" RenderTransformOrigin="0.5,0.5" Color="Water" BorderBrush="Black" Canvas.Left="436" Canvas.Top="707" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Machines:V01_RTF_Microfilter Canvas.Left="386" Canvas.Top="463" Height="130" Width="144" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Machines:V01_DCT_Decanter Canvas.Left="838" Canvas.Top="409" Height="360" Width="224" ComponentName="288-41-LT1" TrendName="LEVEL" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:JumpLabel HorizontalAlignment="Left" VerticalAlignment="Center" JumpFromLabel="293-01-MA1" JumpToLabel="100-01-MA1" Canvas.Left="1318" Canvas.Top="642"/>
         <Labels:JumpLabel JumpFromLabel="292-01-MA1" JumpToLabel="232-01-MA1" Canvas.Left="1318" Canvas.Top="492" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:JumpLabel JumpFromLabel="291-01-MA1" JumpToLabel="230-01-MA1" Canvas.Left="1318" Canvas.Top="416" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:JumpLabel JumpFromLabel="283-01-MA1" JumpToLabel="236-01-MA1" Canvas.Left="240" Canvas.Top="132" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="283-01-MA1" Canvas.Left="195" Canvas.Top="239"/>
+        <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Top" ComponentName="283-01-MA1" Canvas.Left="163" Canvas.Top="211"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="288-21-CV1" Canvas.Left="1127" Canvas.Top="219"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="293-01-MA1" Canvas.Left="1127" Canvas.Top="706"/>
         <Labels:DeviceLabel ComponentName="292-01-MA1" Canvas.Left="1127" Canvas.Top="555" HorizontalAlignment="Left" VerticalAlignment="Center"/>
