--- a/Prevu.Synoptics.V4126_Cotiplast-PET/Pages/P430.xaml
+++ b/Prevu.Synoptics.V4126_Cotiplast-PET/Pages/P430.xaml
@@ -19,7 +19,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="232" Canvas.Top="225" StatusComponent="433-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="673" PipeHeight="Medium" HorizontalAlignment="Center" VerticalAlignment="Top">
+        <Labels:Pipe Width="258" Canvas.Top="212" StatusComponent="433-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="660" PipeHeight="Medium" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
@@ -47,22 +47,22 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Color="Vapor" Width="96" RenderTransformOrigin="0.5,0.5" StatusComponent="450-22-CV1" Canvas.Left="416" Canvas.Top="700" HorizontalAlignment="Center" VerticalAlignment="Top">
+        <Labels:Pipe Color="Vapor" Width="96" RenderTransformOrigin="0.5,0.5" StatusComponent="450-22-CV1" Canvas.Left="416" Canvas.Top="700" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="141" Color="Water" StatusComponent="430-01-MA3" VisibilityComponent="" Canvas.Left="604" Canvas.Top="436" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:Pipe Color="Water" Width="296" RenderTransformOrigin="0.5,0.5" StatusComponent="430-01-MA3" VisibilityComponent="" Canvas.Left="458" Canvas.Top="582" HorizontalAlignment="Center" VerticalAlignment="Top" >
+        <Labels:Pipe Width="141" Color="Water" StatusComponent="430-01-MA3" VisibilityComponent="" Canvas.Left="604" Canvas.Top="444" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:Pipe Color="Water" Width="288" RenderTransformOrigin="0.5,0.5" StatusComponent="430-01-MA3" VisibilityComponent="" Canvas.Left="462" Canvas.Top="586" HorizontalAlignment="Center" VerticalAlignment="Top" >
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="76" StatusComponent="455-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="1193" Canvas.Top="243">
+        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="76" StatusComponent="455-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="1215" Canvas.Top="243">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
@@ -73,26 +73,26 @@
         <Labels:Pipe Width="135" VerticalAlignment="Center" Canvas.Top="131" StatusComponent="420-01-MA1" PipeHeight="Medium" Canvas.Left="264" HorizontalAlignment="Left"/>
         <Labels:Pipe Width="176" VerticalAlignment="Top" Canvas.Top="127" StatusComponent="430-01-MA3" RenderTransformOrigin="0.5,0.5" Canvas.Left="544" HorizontalAlignment="Center" Color="Water"/>
         <Labels:Pipe Width="330" VisibilityComponent="" VerticalAlignment="Center" Canvas.Top="336" StatusComponent="433-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="464" HorizontalAlignment="Left" PipeHeight="Medium"/>
-        <Labels:Pipe Width="66" StatusComponent="440-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="758" Canvas.Top="419" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Width="200" RenderTransformOrigin="0.497,0.467" Color="Chemicals" StatusComponent="451-21-CV1" Canvas.Left="363" Canvas.Top="437" HorizontalAlignment="Center" VerticalAlignment="Top" Text="{lex:Loc ADDITIVE}"/>
-        <Labels:Pipe Width="289" RenderTransformOrigin="0.497,0.467" Color="Chemicals" StatusComponent="451-21-CV1" Canvas.Left="417" Canvas.Top="586" HorizontalAlignment="Center" VerticalAlignment="Top">
+        <Labels:Pipe Width="66" StatusComponent="440-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="758" Canvas.Top="428" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:Pipe Width="175" RenderTransformOrigin="0.497,0.467" Color="Chemicals" StatusComponent="451-21-CV1" Canvas.Left="388" Canvas.Top="437" HorizontalAlignment="Center" VerticalAlignment="Center" Text="{lex:Loc ADDITIVE}"/>
+        <Labels:Pipe Width="289" RenderTransformOrigin="0.497,0.467" Color="Chemicals" StatusComponent="451-21-CV1" Canvas.Left="417" Canvas.Top="586" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Color="Water" Width="192" RenderTransformOrigin="0.5,0.5" StatusComponent="450-21-CV1" Canvas.Left="414" Canvas.Top="648" HorizontalAlignment="Center" VerticalAlignment="Top">
+        <Labels:Pipe Color="Water" Width="192" RenderTransformOrigin="0.5,0.5" StatusComponent="450-21-CV1" Canvas.Left="414" Canvas.Top="648" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Color="Water" Width="44" StatusComponent="450-21-CV1" Canvas.Left="468" Canvas.Top="554" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:Pipe Color="Water" Width="109" StatusComponent="450-21-CV1" Canvas.Left="403" Canvas.Top="554" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:Pipe Width="220" Color="Water" StatusComponent="457-01-MA1" Canvas.Left="661" Canvas.Top="769" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:Pipe Width="309" Color="Water" StatusComponent="453-01-MA1" Canvas.Left="163" Canvas.Top="769" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:Pipe Color="Vapor" Width="53" StatusComponent="450-22-CV1" Canvas.Left="413" Canvas.Top="654" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:Pipe Color="Vapor" Width="73" StatusComponent="450-22-CV1" Canvas.Left="393" Canvas.Top="654" HorizontalAlignment="Center" VerticalAlignment="Center"/>
         <Labels:Pipe Width="622" Canvas.Top="460" StatusComponent="453-01-MA1" Canvas.Left="-146" Color="Water" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
@@ -101,15 +101,15 @@
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe Width="49" Canvas.Top="151" StatusComponent="453-01-MA1" Canvas.Left="163" Color="Water" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:Pipe Width="100" StatusComponent="440-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="772" Canvas.Top="467" HorizontalAlignment="Left" VerticalAlignment="Center">
+        <Labels:Pipe Width="92" StatusComponent="440-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="776" Canvas.Top="472" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="202" StatusComponent="455-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="1226" Canvas.Top="277" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Width="338" Canvas.Top="111" StatusComponent="433-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="784" PipeHeight="Medium" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:Pipe Width="179" StatusComponent="455-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="1249" Canvas.Top="277" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe Width="338" Canvas.Top="86" StatusComponent="433-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="784" PipeHeight="Medium" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:Pipe Width="50" StatusComponent="444-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="1191" Canvas.Top="596" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:Pipe Width="54" StatusComponent="444-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="1212" Canvas.Top="621" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
@@ -127,15 +127,15 @@
         </Labels:Pipe>
         <Labels:Pipe Width="482" Color="Water" StatusComponent="433-01-MA1" Canvas.Left="636" Canvas.Top="614" HorizontalAlignment="Center" VerticalAlignment="Center"/>
         <Machines:WaterPump Width="44" VerticalAlignment="Center" Canvas.Top="319" RenderTransformOrigin="0.5,0.5" Canvas.Left="610" Height="45" HorizontalAlignment="Left"/>
-        <Machines:STR_Washing_reactor_B Height="162" Width="155" Canvas.Left="163" Canvas.Top="90" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Machines:CV_Valve_001 Height="100" Width="100" Color="Water" RenderTransformOrigin="0.51,0.539" Canvas.Left="397" Canvas.Top="505" HorizontalAlignment="Center" VerticalAlignment="Top">
+        <Machines:STR_Washing_reactor_B Height="212" Width="169" Canvas.Left="163" Canvas.Top="77" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Machines:CV_Valve_001 Height="100" Width="100" Color="Water" RenderTransformOrigin="0.51,0.539" Canvas.Left="329" Canvas.Top="505" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Machines:CV_Valve_001.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform ScaleX="-0.5" ScaleY="0.5"/>
                 </TransformGroup>
             </Machines:CV_Valve_001.RenderTransform>
         </Machines:CV_Valve_001>
-        <Machines:CV_Valve_001 Height="100" Width="100" Color="Steam" RenderTransformOrigin="0.51,0.539" Canvas.Left="345" Canvas.Top="605" HorizontalAlignment="Center" VerticalAlignment="Top">
+        <Machines:CV_Valve_001 Height="100" Width="100" Color="Steam" RenderTransformOrigin="0.51,0.539" Canvas.Left="325" Canvas.Top="605" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Machines:CV_Valve_001.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform ScaleX="-0.5" ScaleY="0.5"/>
@@ -143,8 +143,8 @@
             </Machines:CV_Valve_001.RenderTransform>
         </Machines:CV_Valve_001>
         <Machines:V01_VRC_WaterTank Canvas.Left="423" Canvas.Top="683" HorizontalAlignment="Center" VerticalAlignment="Top" Width="253" Height="125" ComponentName="450-41-LT1" TrendName="LEVEL"/>
-        <Machines:V01_WCE_Centrifuge Canvas.Left="1101" Canvas.Top="101" Height="118" Width="150" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Machines:V01_VB_VibratingScreen Canvas.Left="665" Canvas.Top="410" Height="100" Width="100" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Machines:V01_WCE_Centrifuge Canvas.Left="1099" Canvas.Top="75" Height="148" Width="170" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Machines:V01_VB_VibratingScreen Canvas.Left="665" Canvas.Top="418" Height="100" Width="100" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Machines:V01_VB_VibratingScreen Canvas.Left="1096" Canvas.Top="587" Height="100" Width="100" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Machines:V01_VSP_SepTank_w3Paddles Canvas.Left="365" Canvas.Top="101" Height="263" Width="210" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Machines:Waste Height="46" Width="44" Canvas.Left="1217" Canvas.Top="624" HorizontalAlignment="Center" VerticalAlignment="Top"/>
@@ -156,7 +156,7 @@
                 </TransformGroup>
             </Machines:WaterPump.RenderTransform>
         </Machines:WaterPump>
-        <Machines:WaterPump Height="45" Width="45" RenderTransformOrigin="0.5,0.5" Color="Chemicals" Canvas.Left="328" Canvas.Top="425" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Machines:WaterPump Height="45" Width="46" RenderTransformOrigin="0.5,0.5" Color="Chemicals" Canvas.Left="356" Canvas.Top="425" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Rectangle Height="55" Canvas.Left="948" Canvas.Top="387" Width="67" Fill="#FF8A8A8A" RadiusX="10" RadiusY="10" HorizontalAlignment="Left" VerticalAlignment="Center" RenderTransformOrigin="0.5,0.5">
             <Rectangle.RenderTransform>
                 <TransformGroup>
@@ -178,15 +178,15 @@
         <Labels:DeviceLabel ComponentName="433-01-MA1" Canvas.Left="587" Canvas.Top="252" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="430-PADDLES" Canvas.Left="408" Canvas.Top="50" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="430-41-LT1" RenderTransformOrigin="0.5,0.5" Canvas.Left="425" Canvas.Top="167" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:DeviceLabel ComponentName="420-01-MA1" Canvas.Left="196" Canvas.Top="46" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:DeviceLabel ComponentName="455-01-MA1" Canvas.Left="1245" Canvas.Top="134" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:DeviceLabel ComponentName="420-01-MA1" Canvas.Left="202" Canvas.Top="37" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:DeviceLabel ComponentName="455-01-MA1" Canvas.Left="1274" Canvas.Top="91" HorizontalAlignment="Left" VerticalAlignment="Top"/>
         <Labels:DeviceLabel ComponentName="453-01-MA1" Canvas.Left="245" Canvas.Top="692" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:DeviceLabel ComponentName="457-01-MA1" Canvas.Left="708" Canvas.Top="693" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:DeviceLabel ComponentName="450-21-CV1" Canvas.Left="406" Canvas.Top="484" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:DeviceLabel ComponentName="451-21-CV1" Canvas.Left="306" Canvas.Top="367" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:DeviceLabel ComponentName="450-22-CV1" Canvas.Left="354" Canvas.Top="586" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:DeviceLabel ComponentName="450-21-CV1" Canvas.Left="334" Canvas.Top="484" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:DeviceLabel ComponentName="451-21-CV1" Canvas.Left="334" Canvas.Top="367" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:DeviceLabel ComponentName="450-22-CV1" Canvas.Left="334" Canvas.Top="586" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="450-41-LT1" RenderTransformOrigin="0.5,0.5" Canvas.Left="450" Canvas.Top="717" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:DeviceLabel ComponentName="440-01-MA1" Canvas.Left="670" Canvas.Top="476" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:DeviceLabel ComponentName="440-01-MA1" Canvas.Left="670" Canvas.Top="484" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:DeviceLabel ComponentName="450-42-TT1" RenderTransformOrigin="0.5,0.5" Canvas.Left="559" Canvas.Top="717" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:DeviceLabel ComponentName="444-01-MA1" Canvas.Left="1101" Canvas.Top="653" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:DeviceLabel ComponentName="446-62-BAG" Canvas.Left="1314" Canvas.Top="571" HorizontalAlignment="Center" VerticalAlignment="Top" />
