--- a/Prevu.Synoptics.V6994_Lyondell_Basell/L1/Pages/L1_P330.xaml
+++ b/Prevu.Synoptics.V6994_Lyondell_Basell/L1/Pages/L1_P330.xaml
@@ -98,7 +98,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="48" RenderTransformOrigin="0.5,0.5" Color="Water" StatusComponent="L1+373-01-MA1" Canvas.Left="1050" Canvas.Top="493" VisibilityComponent="L1+354-31-CV1" VisibilitySignal="LS2" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+        <Labels:Pipe Width="48" RenderTransformOrigin="0.5,0.5" Color="Water" StatusComponent="L1+373-01-MA1" Canvas.Left="1050" Canvas.Top="493" VisibilityComponent="L1+354-31-CV1" VisibilitySignal="LS-CLOSED" HorizontalAlignment="Left" VerticalAlignment="Top"/>
         <Labels:Pipe RenderTransformOrigin="0.5,0.5" Width="140" StatusComponent="L1+324-01-MA1" PipeHeight="Medium" VisibilityComponent="L1+324-31-CV1" VisibilitySignal="LS1" Canvas.Left="1038" Canvas.Top="506" HorizontalAlignment="Left" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
@@ -113,8 +113,8 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="116" RenderTransformOrigin="0.5,0.5" Color="Water" StatusComponent="L1+373-01-MA1" Canvas.Left="1334" Canvas.Top="493" VisibilityComponent="L1+354-31-CV1" VisibilitySignal="LS2" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-        <Labels:Pipe Width="196" RenderTransformOrigin="0.5,0.5" Color="Water" StatusComponent="L1+373-01-MA1" Canvas.Left="1118" Canvas.Top="493" VisibilityComponent="L1+354-31-CV1" VisibilitySignal="LS2" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+        <Labels:Pipe Width="116" RenderTransformOrigin="0.5,0.5" Color="Water" StatusComponent="L1+373-01-MA1" Canvas.Left="1334" Canvas.Top="493" VisibilityComponent="L1+354-31-CV1" VisibilitySignal="LS-CLOSED" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+        <Labels:Pipe Width="196" RenderTransformOrigin="0.5,0.5" Color="Water" StatusComponent="L1+373-01-MA1" Canvas.Left="1118" Canvas.Top="493" VisibilityComponent="L1+354-31-CV1" VisibilitySignal="LS-CLOSED" HorizontalAlignment="Left" VerticalAlignment="Top"/>
         <Machines:V01_SCW_Screw_wHopper Canvas.Left="101" Canvas.Top="80" Height="180" Width="174" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Rectangle Height="2" Stroke="Black" Width="68" RenderTransformOrigin="0.5,0.5" Canvas.Left="45" Canvas.Top="541" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Rectangle.RenderTransform>
