--- a/Prevu.Synoptics.V6994_Lyondell_Basell/L1/Pages/L1_P350.xaml
+++ b/Prevu.Synoptics.V6994_Lyondell_Basell/L1/Pages/L1_P350.xaml
@@ -72,7 +72,7 @@
         <Labels:Pipe Color="Water" Width="65" StatusComponent="L1+310-44-FT1" Canvas.Left="1250" Canvas.Top="269" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:Pipe Width="150" StatusComponent="L1+380-01-MA1" PipeHeight="Medium" Canvas.Left="1172" Canvas.Top="107" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:Pipe Color="Water" Width="282" StatusComponent="L1+373-01-MA1" Canvas.Left="684" Canvas.Top="651" HorizontalAlignment="Left" VerticalAlignment="Center" VisibilityComponent="L1+354-31-CV1" VisibilitySignal="LS1"/>
-        <Labels:Pipe Color="Water" Width="138" RenderTransformOrigin="0.5,0.5" StatusComponent="L1+373-01-MA1" VisibilityComponent="L1+354-31-CV1" Canvas.Left="618" Canvas.Top="539" HorizontalAlignment="Center" VerticalAlignment="Top" VisibilitySignal="LS1">
+        <Labels:Pipe Color="Water" Width="138" RenderTransformOrigin="0.5,0.5" StatusComponent="L1+373-01-MA1" VisibilityComponent="L1+354-31-CV1" Canvas.Left="618" Canvas.Top="539" HorizontalAlignment="Center" VerticalAlignment="Top" VisibilitySignal="LS-OPEN">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
@@ -129,8 +129,8 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="73" Color="Water" StatusComponent="L1+373-01-MA1" Canvas.Left="193" Canvas.Top="781" HorizontalAlignment="Left" VerticalAlignment="Center" RenderTransformOrigin="0.5,0.5" VisibilityComponent="L1+354-32-CV1" VisibilitySignal="LS1" />
-        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Center" Color="Water" Width="212" StatusComponent="L1+373-01-MA1" VisibilityComponent="L1+354-31-CV1" Canvas.Left="477" Canvas.Top="462" Icon="Right" VisibilitySignal="LS1"/>
+        <Labels:Pipe Width="73" Color="Water" StatusComponent="L1+373-01-MA1" Canvas.Left="193" Canvas.Top="781" HorizontalAlignment="Left" VerticalAlignment="Center" RenderTransformOrigin="0.5,0.5" VisibilityComponent="L1+354-32-CV1" VisibilitySignal="LS-OPEN" />
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Center" Color="Water" Width="212" StatusComponent="L1+373-01-MA1" VisibilityComponent="L1+354-31-CV1" Canvas.Left="477" Canvas.Top="462" Icon="Right" VisibilitySignal="LS-OPEN"/>
         <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="89" StatusComponent="L1+352-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="513" Canvas.Top="590"/>
         <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="64" StatusComponent="L1+352-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="483" Canvas.Top="620">
             <Labels:Pipe.RenderTransform>
@@ -139,8 +139,8 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Color="Water" Width="83" StatusComponent="L1+373-01-MA1" Canvas.Left="362" Canvas.Top="472" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="Water" Width="168" StatusComponent="L1+373-01-MA1" Canvas.Left="196" Canvas.Top="472" VisibilityComponent="L1+354-31-CV1" VisibilitySignal="LS2"/>
+        <Labels:Pipe Color="Water" Width="83" StatusComponent="L1+373-01-MA1" Canvas.Left="362" Canvas.Top="472" HorizontalAlignment="Left" VerticalAlignment="Center" VisibilitySignal="LS-OPEN"/>
+        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="Water" Width="168" StatusComponent="L1+373-01-MA1" Canvas.Left="196" Canvas.Top="472" VisibilityComponent="L1+354-31-CV1" VisibilitySignal="LS-CLOSED"/>
         <Machines:CV_Valve HorizontalAlignment="Left" VerticalAlignment="Center" Height="50" Width="50" RenderTransformOrigin="0.5,0.5" Canvas.Left="434" Canvas.Top="450"/>
         <Machines:CV_Valve_001 HorizontalAlignment="Left" VerticalAlignment="Center" Height="50" Width="50" Color="Water" RenderTransformOrigin="0.51,0.539" Canvas.Left="1330" Canvas.Top="606"/>
         <Machines:EXC_HeatExchanger HorizontalAlignment="Left" VerticalAlignment="Center" RenderTransformOrigin="0.5,0.5" Width="50" Height="70" Canvas.Left="339" Canvas.Top="586">
