--- a/Prevu.Synoptics.V6994_Lyondell_Basell/L2/Pages/L2_P330.xaml
+++ b/Prevu.Synoptics.V6994_Lyondell_Basell/L2/Pages/L2_P330.xaml
@@ -88,7 +88,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="48" RenderTransformOrigin="0.5,0.5" Color="Water" StatusComponent="L2+373-01-MA1" Canvas.Left="1050" Canvas.Top="493" VisibilityComponent="L2+354-31-CV1" VisibilitySignal="LS2" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+        <Labels:Pipe Width="48" RenderTransformOrigin="0.5,0.5" Color="Water" StatusComponent="L2+373-01-MA1" Canvas.Left="1050" Canvas.Top="493" VisibilityComponent="L2+354-31-CV1" VisibilitySignal="LS-CLOSED" HorizontalAlignment="Left" VerticalAlignment="Top"/>
         <Labels:Pipe RenderTransformOrigin="0.5,0.5" Width="140" StatusComponent="L2+324-01-MA1" PipeHeight="Medium" VisibilityComponent="L2+324-31-CV1" VisibilitySignal="LS1" Canvas.Left="1038" Canvas.Top="506" HorizontalAlignment="Left" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
@@ -103,8 +103,8 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="116" RenderTransformOrigin="0.5,0.5" Color="Water" StatusComponent="L2+373-01-MA1" Canvas.Left="1334" Canvas.Top="493" VisibilityComponent="L2+354-31-CV1" VisibilitySignal="LS2" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-        <Labels:Pipe Width="196" RenderTransformOrigin="0.5,0.5" Color="Water" StatusComponent="L2+373-01-MA1" Canvas.Left="1118" Canvas.Top="493" VisibilityComponent="L2+354-31-CV1" VisibilitySignal="LS2" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+        <Labels:Pipe Width="116" RenderTransformOrigin="0.5,0.5" Color="Water" StatusComponent="L2+373-01-MA1" Canvas.Left="1334" Canvas.Top="493" VisibilityComponent="L2+354-31-CV1" VisibilitySignal="LS-CLOSED" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+        <Labels:Pipe Width="196" RenderTransformOrigin="0.5,0.5" Color="Water" StatusComponent="L2+373-01-MA1" Canvas.Left="1118" Canvas.Top="493" VisibilityComponent="L2+354-31-CV1" VisibilitySignal="LS-CLOSED" HorizontalAlignment="Left" VerticalAlignment="Top"/>
         <Machines:V01_SCW_Screw_wHopper Canvas.Left="101" Canvas.Top="80" Height="180" Width="174" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Machines:V01_CV_Valve Canvas.Left="267" Canvas.Top="535" Height="28" Width="55" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Machines:SCW_ScrewConveyor_straight RenderTransformOrigin="0.5,0.5" Width="118" Height="18" Canvas.Left="246" Canvas.Top="336" HorizontalAlignment="Center" VerticalAlignment="Top" />
