--- a/Prevu.Synoptics.V6994_Lyondell_Basell/WaterView.xaml
+++ b/Prevu.Synoptics.V6994_Lyondell_Basell/WaterView.xaml
@@ -215,7 +215,7 @@
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe Color="Water" Width="26" RenderTransformOrigin="0.5,0.5" StatusComponent="L0+363-01-MA1" Canvas.Left="1914" Canvas.Top="930" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:Pipe Color="Water" Width="222" StatusComponent="L2+373-01-MA1" Canvas.Left="1762" Canvas.Top="870" RenderTransformOrigin="0.5,0.5" VisibilityComponent="L2+354-31-CV1" VisibilitySignal="LS2" HorizontalAlignment="Center" VerticalAlignment="Top">
+        <Labels:Pipe Color="Water" Width="222" StatusComponent="L2+373-01-MA1" Canvas.Left="1762" Canvas.Top="870" RenderTransformOrigin="0.5,0.5" VisibilityComponent="L2+354-31-CV1" VisibilitySignal="LS-CLOSED" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
@@ -229,7 +229,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Color="Water" Width="93" StatusComponent="L2+373-01-MA1" Canvas.Left="1743" Canvas.Top="1151" VisibilityComponent="L2+354-32-CV1" VisibilitySignal="LS1" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:Pipe Color="Water" Width="93" StatusComponent="L2+373-01-MA1" Canvas.Left="1743" Canvas.Top="1151" VisibilityComponent="L2+354-32-CV1" VisibilitySignal="LS-OPEN" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:Pipe Color="Water" Width="82" StatusComponent="L2+350-01-MA1" Canvas.Left="2066" Canvas.Top="828" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
@@ -271,7 +271,7 @@
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe Color="Water" Width="70" RenderTransformOrigin="0.5,0.5" StatusComponent="L2+350-01-MA1" Canvas.Left="2039" Canvas.Top="789" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:Pipe Color="Water" Width="142" RenderTransformOrigin="0.5,0.5" StatusComponent="L2+373-01-MA1" Canvas.Left="1871" Canvas.Top="761" VisibilityComponent="L2+354-31-CV1" VisibilitySignal="LS2" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:Pipe Color="Water" Width="142" RenderTransformOrigin="0.5,0.5" StatusComponent="L2+373-01-MA1" Canvas.Left="1871" Canvas.Top="761" VisibilityComponent="L2+354-31-CV1" VisibilitySignal="LS-CLOSED" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:Pipe Color="Water" Width="70" RenderTransformOrigin="0.5,0.5" StatusComponent="L2+250-23-CV1" Canvas.Left="2006" Canvas.Top="88" HorizontalAlignment="Center" VerticalAlignment="Top" >
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
@@ -371,8 +371,8 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Color="Water" Width="105" RenderTransformOrigin="0.5,0.5" StatusComponent="L1+373-01-MA1" Canvas.Left="129" Canvas.Top="609" VisibilityComponent="L1+354-32-CV1" VisibilitySignal="LS1" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:Pipe Color="Water" Width="20" StatusComponent="L1+373-01-MA1" Canvas.Left="222" Canvas.Top="617" RenderTransformOrigin="0.5,0.5" VisibilityComponent="L1+354-32-CV1" VisibilitySignal="LS1" HorizontalAlignment="Center" VerticalAlignment="Top">
+        <Labels:Pipe Color="Water" Width="105" RenderTransformOrigin="0.5,0.5" StatusComponent="L1+373-01-MA1" Canvas.Left="129" Canvas.Top="609" VisibilityComponent="L1+354-32-CV1" VisibilitySignal="LS-OPEN" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:Pipe Color="Water" Width="20" StatusComponent="L1+373-01-MA1" Canvas.Left="222" Canvas.Top="617" RenderTransformOrigin="0.5,0.5" VisibilityComponent="L1+354-32-CV1" VisibilitySignal="LS-OPEN" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
@@ -410,8 +410,8 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Color="Water" Width="121" RenderTransformOrigin="0.5,0.5" StatusComponent="L2+373-01-MA1" Canvas.Left="120" Canvas.Top="602" VisibilityComponent="L2+354-32-CV1" VisibilitySignal="LS1" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:Pipe Color="Water" Width="24" StatusComponent="L2+373-01-MA1" Canvas.Left="227" Canvas.Top="612" RenderTransformOrigin="0.5,0.5" VisibilityComponent="L2+354-32-CV1" VisibilitySignal="LS1" HorizontalAlignment="Center" VerticalAlignment="Top">
+        <Labels:Pipe Color="Water" Width="121" RenderTransformOrigin="0.5,0.5" StatusComponent="L2+373-01-MA1" Canvas.Left="120" Canvas.Top="602" VisibilityComponent="L2+354-32-CV1" VisibilitySignal="LS-OPEN" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:Pipe Color="Water" Width="24" StatusComponent="L2+373-01-MA1" Canvas.Left="227" Canvas.Top="612" RenderTransformOrigin="0.5,0.5" VisibilityComponent="L2+354-32-CV1" VisibilitySignal="LS-OPEN" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
@@ -429,22 +429,22 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Color="Water" Width="1627" RenderTransformOrigin="0.5,0.5" StatusComponent="L2+373-01-MA1" Canvas.Left="120" Canvas.Top="1188" VisibilityComponent="L2+354-32-CV1" VisibilitySignal="LS1" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-        <Labels:Pipe Color="Water" Width="546" StatusComponent="L1+373-01-MA1" Canvas.Left="-142" Canvas.Top="880" RenderTransformOrigin="0.5,0.5" VisibilityComponent="L1+354-32-CV1" VisibilitySignal="LS1" HorizontalAlignment="Center" VerticalAlignment="Top">
+        <Labels:Pipe Color="Water" Width="1627" RenderTransformOrigin="0.5,0.5" StatusComponent="L2+373-01-MA1" Canvas.Left="120" Canvas.Top="1188" VisibilityComponent="L2+354-32-CV1" VisibilitySignal="LS-OPEN" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+        <Labels:Pipe Color="Water" Width="546" StatusComponent="L1+373-01-MA1" Canvas.Left="-142" Canvas.Top="880" RenderTransformOrigin="0.5,0.5" VisibilityComponent="L1+354-32-CV1" VisibilitySignal="LS-OPEN" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Color="Water" Width="590" StatusComponent="L2+373-01-MA1" Canvas.Left="-173" Canvas.Top="895" RenderTransformOrigin="0.5,0.5" VisibilityComponent="L2+354-32-CV1" VisibilitySignal="LS1" HorizontalAlignment="Center" VerticalAlignment="Top">
+        <Labels:Pipe Color="Water" Width="590" StatusComponent="L2+373-01-MA1" Canvas.Left="-173" Canvas.Top="895" RenderTransformOrigin="0.5,0.5" VisibilityComponent="L2+354-32-CV1" VisibilitySignal="LS-OPEN" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Color="Water" Width="40" StatusComponent="L2+373-01-MA1" Canvas.Left="1725" Canvas.Top="1169" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top" VisibilityComponent="L2+354-32-CV1" VisibilitySignal="LS1">
+        <Labels:Pipe Color="Water" Width="40" StatusComponent="L2+373-01-MA1" Canvas.Left="1725" Canvas.Top="1169" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top" VisibilityComponent="L2+354-32-CV1" VisibilitySignal="LS-OPEN">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
@@ -734,7 +734,7 @@
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe Color="Water" Width="26" RenderTransformOrigin="0.5,0.5" StatusComponent="L0+363-01-MA1" Canvas.Left="814" Canvas.Top="930" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:Pipe Color="Water" Width="222" StatusComponent="L1+373-01-MA1" Canvas.Left="662" Canvas.Top="870" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top" VisibilityComponent="L1+354-31-CV1" VisibilitySignal="LS2">
+        <Labels:Pipe Color="Water" Width="222" StatusComponent="L1+373-01-MA1" Canvas.Left="662" Canvas.Top="870" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top" VisibilityComponent="L1+354-31-CV1" VisibilitySignal="LS-CLOSED">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
@@ -812,7 +812,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Color="Water" Width="607" StatusComponent="L1+373-01-MA1" Canvas.Left="129" Canvas.Top="1151" HorizontalAlignment="Center" VerticalAlignment="Top" VisibilityComponent="L1+354-32-CV1" VisibilitySignal="LS1"/>
+        <Labels:Pipe Color="Water" Width="607" StatusComponent="L1+373-01-MA1" Canvas.Left="129" Canvas.Top="1151" HorizontalAlignment="Center" VerticalAlignment="Top" VisibilityComponent="L1+354-32-CV1" VisibilitySignal="LS-OPEN"/>
         <Labels:Pipe Color="Water" Width="82" StatusComponent="L1+350-01-MA1" Canvas.Left="966" Canvas.Top="828" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
@@ -845,8 +845,8 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Color="Water" Width="35" RenderTransformOrigin="0.5,0.5" StatusComponent="L1+373-01-MA1" Canvas.Left="818" Canvas.Top="978" HorizontalAlignment="Center" VerticalAlignment="Top" VisibilityComponent="L1+354-31-CV1" VisibilitySignal="LS1"/>
-        <Labels:Pipe Color="Water" Width="20" StatusComponent="L1+373-01-MA1" Canvas.Left="841" Canvas.Top="986" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top" VisibilityComponent="L1+354-31-CV1" VisibilitySignal="LS1">
+        <Labels:Pipe Color="Water" Width="35" RenderTransformOrigin="0.5,0.5" StatusComponent="L1+373-01-MA1" Canvas.Left="818" Canvas.Top="978" HorizontalAlignment="Center" VerticalAlignment="Top" VisibilityComponent="L1+354-31-CV1" VisibilitySignal="LS-OPEN"/>
+        <Labels:Pipe Color="Water" Width="20" StatusComponent="L1+373-01-MA1" Canvas.Left="841" Canvas.Top="986" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top" VisibilityComponent="L1+354-31-CV1" VisibilitySignal="LS-OPEN">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
@@ -854,7 +854,7 @@
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe Color="Water" Width="70" RenderTransformOrigin="0.5,0.5" StatusComponent="L1+350-01-MA1" Canvas.Left="939" Canvas.Top="789" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:Pipe Color="Water" Width="142" RenderTransformOrigin="0.5,0.5" StatusComponent="L1+373-01-MA1" Canvas.Left="771" Canvas.Top="761" HorizontalAlignment="Center" VerticalAlignment="Top" VisibilityComponent="L1+354-31-CV1" VisibilitySignal="LS2"/>
+        <Labels:Pipe Color="Water" Width="142" RenderTransformOrigin="0.5,0.5" StatusComponent="L1+373-01-MA1" Canvas.Left="771" Canvas.Top="761" HorizontalAlignment="Center" VerticalAlignment="Top" VisibilityComponent="L1+354-31-CV1" VisibilitySignal="LS-CLOSED"/>
         <Rectangle Height="20" Stroke="Black" Width="2" RenderTransformOrigin="0.5,0.5" Canvas.Left="1168" Canvas.Top="940" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Machines:External Canvas.Left="1156" Canvas.Top="956" Height="28" Width="26" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Machines:External.RenderTransform>
