--- a/Prevu.Synoptics.V6994_Lyondell_Basell/L0/Pages/L0_P355.xaml
+++ b/Prevu.Synoptics.V6994_Lyondell_Basell/L0/Pages/L0_P355.xaml
@@ -149,22 +149,22 @@
         <Labels:Pipe Color="Water" Width="71" StatusComponent="L0+363-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="1329" Canvas.Top="153" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:Pipe Color="Water" Width="52" StatusComponent="L0+345-21-CV2" RenderTransformOrigin="0.5,0.5" Canvas.Left="675" Canvas.Top="255" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:Pipe Color="Water" Width="50" StatusComponent="L0+345-21-CV1" RenderTransformOrigin="0.5,0.5" Canvas.Left="677" Canvas.Top="225" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Color="Water" Width="32" RenderTransformOrigin="0.5,0.5" StatusComponent="L2+373-01-MA1" Canvas.Left="653" Canvas.Top="175" HorizontalAlignment="Left" VerticalAlignment="Center" VisibilityComponent="L2+354-32-CV1" VisibilitySignal="LS1">
+        <Labels:Pipe Color="Water" Width="32" RenderTransformOrigin="0.5,0.5" StatusComponent="L2+373-01-MA1" Canvas.Left="653" Canvas.Top="175" HorizontalAlignment="Left" VerticalAlignment="Center" VisibilityComponent="L2+354-32-CV1" VisibilitySignal="LS-OPEN">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="126" Color="Water" StatusComponent="L2+373-01-MA1" Canvas.Left="667" Canvas.Top="161" HorizontalAlignment="Left" VerticalAlignment="Center" VisibilityComponent="L2+354-32-CV1" VisibilitySignal="LS1"/>
-        <Labels:Pipe Color="Water" Width="108" RenderTransformOrigin="0.5,0.5" StatusComponent="L1+373-01-MA1" Canvas.Left="606" Canvas.Top="137" HorizontalAlignment="Left" VerticalAlignment="Center" VisibilityComponent="L1+354-32-CV1" VisibilitySignal="LS1">
+        <Labels:Pipe Width="126" Color="Water" StatusComponent="L2+373-01-MA1" Canvas.Left="667" Canvas.Top="161" HorizontalAlignment="Left" VerticalAlignment="Center" VisibilityComponent="L2+354-32-CV1" VisibilitySignal="LS-OPEN"/>
+        <Labels:Pipe Color="Water" Width="108" RenderTransformOrigin="0.5,0.5" StatusComponent="L1+373-01-MA1" Canvas.Left="606" Canvas.Top="137" HorizontalAlignment="Left" VerticalAlignment="Center" VisibilityComponent="L1+354-32-CV1" VisibilitySignal="LS-OPEN">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="142" Color="Water" StatusComponent="L1+373-01-MA1" Canvas.Left="659" Canvas.Top="85" HorizontalAlignment="Left" VerticalAlignment="Center" VisibilityComponent="L1+354-32-CV1" VisibilitySignal="LS1"/>
+        <Labels:Pipe Width="142" Color="Water" StatusComponent="L1+373-01-MA1" Canvas.Left="659" Canvas.Top="85" HorizontalAlignment="Left" VerticalAlignment="Center" VisibilityComponent="L1+354-32-CV1" VisibilitySignal="LS-OPEN"/>
         <Labels:Pipe Width="40" Color="Water" StatusComponent="L0+340-32-CV1" Canvas.Left="443" Canvas.Top="557" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:Pipe Width="46" Color="Water" StatusComponent="L0+340-32-CV1" RenderTransformOrigin="0.5,0.5" Canvas.Left="535" Canvas.Top="536" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
